--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "rimraf": "^5.0.10",
     "turbo": "^2.5.8",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@tamagui/lucide-icons": "^1.135.3",
+    "burnt": "^0.13.0"
   }
 }
