feat: add react-icons dependency and update app icon
- Added `react-icons` dependency to enhance icon usage across the application.
- Updated the app icon to improve visual representation in mobile assets.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@tamagui/lucide-icons": "^1.135.3",
-    "burnt": "^0.13.0"
+    "burnt": "^0.13.0",
+    "react-icons": "^5.4.0"
   }
 }
