feat: enhance authentication flow and UI in Home, Login, and Register pages
- Added user authentication checks in HomePage to redirect unauthenticated users to the login page.
- Implemented loading states and error handling in LoginPage and RegisterPage for improved user feedback during authentication processes.
- Updated Navbar component to include a logout option for user convenience.
- Integrated signIn and signUp functions from the @hestia/data package to manage user sessions effectively.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hestia/data": "workspace:*",
     "@hestia/ui": "workspace:*",
     "@tamagui/animations-react-native": "^1.135.3",
     "@tamagui/config-default": "^1.135.3",
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
     "tailwindcss": "^4",
