--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,8 @@
     "@tamagui/shorthands": "^1.135.3",
     "@tamagui/themes": "^1.135.3",
     "@tamagui/toast": "^1.135.3",
+    "mapbox-gl": "^3.1.2",
+    "react-map-gl": "^7.1.7",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
