refactor: rename project from Hestia to Shiftly
- Updated project references in .gitignore, package.json, and README.md to reflect the new name "Shiftly".
- Modified authentication implementation documentation to align with the Shiftly branding.
- Renamed UI and data packages from @hestia to @shiftly across the codebase for consistency.
- Adjusted UI components and styles to incorporate Shiftly branding, including color changes and text updates.
- Ensured all relevant files and components reflect the transition from Hestia to Shiftly, enhancing overall project coherence.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hestia/web",
+  "name": "@shiftly/web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@hestia/data": "workspace:*",
-    "@hestia/ui": "workspace:*",
+    "@shiftly/data": "workspace:*",
+    "@shiftly/ui": "workspace:*",
     "@tamagui/animations-react-native": "^1.135.3",
     "@tamagui/config-default": "^1.135.3",
     "@tamagui/core": "^1.135.3",
