--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hestia/mobile",
+  "name": "@shiftly/mobile",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -37,7 +37,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "@hestia/ui": "workspace:*"
+    "@shiftly/ui": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
