--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "@hestia/data",
+  "name": "@shiftly/data",
   "version": "0.0.0",
   "private": true,
   "main": "./index.ts",
   "types": "./index.ts",
+  "exports": {
+    ".": {
+      "types": "./index.ts",
+      "default": "./index.ts"
+    }
+  },
   "scripts": {
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
