--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "@hestia/ui",
+  "name": "@shiftly/ui",
   "version": "0.0.1",
   "private": true,
   "main": "src/index.ts",
   "types": "src/index.ts",
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "default": "./src/index.ts"
+    }
+  },
   "sideEffects": false,
   "scripts": {
     "build": "tamagui-build",
