feat: integrate session management and profile caching across application
- Added SessionProvider and SessionCacheDebug components to manage user sessions in the layout.
- Updated login functionality to refresh session cache upon successful sign-in.
- Refactored missions and profile pages to utilize hooks for fetching user profiles and managing state, improving data handling and reducing redundant API calls.
- Enhanced mission creation and editing pages to refresh mission cache after updates, ensuring data consistency.
- Introduced useCurrentProfile and useRecruiterMissions hooks for streamlined profile and mission data management.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,6 +20,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "@shiftly/core": ["../../packages/core"],
       "@shiftly/data": ["../../packages/data"],
       "@shiftly/ui": ["../../packages/ui/src"]
     }
