feat: add messaging navigation to Navbar and AppLayout
- Introduced a new navigation option for messaging in the Navbar component, allowing users to access the messaging page.
- Updated the AppLayout component to include the messaging navigation functionality.
- Added lucide-react icons for improved visual representation in the Navbar.

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,9 +20,11 @@
     "@tamagui/config-default": "^1.135.3",
     "@tamagui/core": "^1.135.3",
     "@tamagui/font-inter": "^1.135.3",
+    "@tamagui/lucide-icons": "^1.135.3",
     "@tamagui/shorthands": "^1.135.3",
     "@tamagui/themes": "^1.135.3",
     "@tamagui/toast": "^1.135.3",
+    "lucide-react": "^0.555.0",
     "react": "^19.1.0",
     "react-native": "^0.81.4",
     "react-native-svg": "^15.14.0",
