--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,11 +19,12 @@
     "@tamagui/shorthands": "^1.135.3",
     "@tamagui/themes": "^1.135.3",
     "@tamagui/toast": "^1.135.3",
+    "lucide-react": "^0.555.0",
     "mapbox-gl": "^3.1.2",
-    "react-map-gl": "^7.1.7",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-map-gl": "^7.1.7",
     "tamagui": "^1.135.3"
   },
   "devDependencies": {
