--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-map-gl": "^7.1.7",
+    "recharts": "^3.5.1",
     "tamagui": "^1.135.3"
   },
   "devDependencies": {
