feat: integrate React Query for data caching and improve session management
- Added @tanstack/react-query for enhanced data fetching and caching capabilities across various hooks.
- Refactored useCachedFreelanceData, useCachedProfile, and useCheckApplication to utilize React Query, improving performance and reducing redundant API calls.
- Updated layout components to include QueryProvider for managing query states.
- Deprecated useCachedMission in favor of useCachedMissions for better modularity and clarity in mission data handling.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@tamagui/shorthands": "^1.135.3",
     "@tamagui/themes": "^1.135.3",
     "@tamagui/toast": "^1.135.3",
+    "@tanstack/react-query": "^5.90.11",
     "lucide-react": "^0.555.0",
     "mapbox-gl": "^3.1.2",
     "next": "15.5.5",
