--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,9 @@
     "@tamagui/shorthands": "^1.135.3",
     "@tamagui/themes": "^1.135.3",
     "@tamagui/toast": "^1.135.3",
+    "@tanstack/query-sync-storage-persister": "^5.90.13",
     "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query-persist-client": "^5.90.13",
     "lucide-react": "^0.555.0",
     "mapbox-gl": "^3.1.2",
     "next": "15.5.5",
