feat: integrate @shiftly/payments and enhance subscription page functionality
- Added @shiftly/payments as a dependency and updated tsconfig for path resolution.
- Refactored SubscriptionPage to utilize subscription plans from @shiftly/payments, improving code organization.
- Implemented error handling and loading states during subscription process, enhancing user experience.
- Updated SubscriptionCard to support loading state during subscription actions.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -22,6 +22,8 @@
       "@/*": ["./src/*"],
       "@shiftly/core": ["../../packages/core"],
       "@shiftly/data": ["../../packages/data"],
+      "@shiftly/payments": ["../../packages/payments"],
+      "@shiftly/payments/*": ["../../packages/payments/*"],
       "@shiftly/ui": ["../../packages/ui/src"]
     }
   },
