--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@shiftly/core": "workspace:*",
     "@shiftly/data": "workspace:*",
+    "@shiftly/payments": "workspace:*",
     "@shiftly/ui": "workspace:*",
     "@tamagui/animations-react-native": "^1.135.3",
     "@tamagui/config-default": "^1.135.3",
