--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "cd ../.. && pnpm turbo run build --filter=@shiftly/web",
-  "installCommand": "pnpm install --no-frozen-lockfile"
+  "installCommand": "corepack enable && corepack prepare pnpm@10.19.0 --activate && pnpm install --no-frozen-lockfile",
+  "nodeVersion": "20.x"
 }
