--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "shiftly-apps",
   "private": true,
   "packageManager": "pnpm@9.15.0",
+  "engines": {
+    "node": "24.x"
+  },
   "workspaces": [
     "apps/*",
     "packages/*"
