--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd ../.. && pnpm turbo run build --filter=@shiftly/web",
-  "installCommand": "pnpm install --no-frozen-lockfile"
+  "buildCommand": "pnpm turbo run build --filter=@shiftly/web",
+  "installCommand": "corepack enable && corepack prepare pnpm@9.15.0 --activate && pnpm install --no-frozen-lockfile"
 }
