--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,8 @@
 package-manager-strict=true
 auto-install-peers=true
 strict-peer-dependencies=false
+registry=https://registry.npmjs.org/
+fetch-retries=5
+fetch-retry-mintimeout=10000
+fetch-retry-maxtimeout=60000
+network-timeout=300000
