--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "pnpm turbo run build --filter=@shiftly/web",
-  "installCommand": "corepack enable && corepack prepare pnpm@10.5.2 --activate && pnpm install --no-frozen-lockfile"
+  "installCommand": "corepack enable && corepack prepare pnpm@10.18.3 --activate && pnpm install"
 }
