--- a/package.json
+++ b/package.json
@@ -30,5 +30,14 @@
     "@tamagui/lucide-icons": "^1.135.3",
     "burnt": "^0.13.0",
     "react-icons": "^5.4.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "@tailwindcss/oxide",
+      "esbuild",
+      "sharp",
+      "unrs-resolver"
+    ]
   }
 }
