feat/ merge for Howel's demo (#7)
* feat: enhance login page with loading state and spinner

- Added a loading overlay with a spinner and message to the login page to improve user feedback during the login process.
- Updated the useLoginPage hook to manage loading state more effectively by incorporating a new isRedirecting state, ensuring a smoother user experience during authentication.

* update .gitignore

* update

* feat: integrate AuthGuard into layout for enhanced authentication handling

- Added AuthGuard component to the RootLayout to protect child components based on user authentication status.
- Updated components index to export AuthGuard for better accessibility across the application.

* feat: add footer pages

* feat: enhance Home and Navbar components for improved user redirection and profile handling

- Replaced useAuthRedirect with useCurrentProfile for better profile management in Home component.
- Implemented loading states and conditional rendering based on user authentication and profile status.
- Updated Navbar to redirect users based on their role, directing recruiters to the freelance page.
- Added useEffect in HomePage to handle recruiter redirection seamlessly.

* feat: implement direct conversation mission handling in chat and profile components

- Added logic to identify "Contact direct" missions in ConversationView, affecting payment visibility for recruiters and freelancers.
- Integrated getOrCreateDirectConversationMission function to create or retrieve direct conversation missions in FreelanceProfileSidebar.
- Updated useMissionPaymentInConversation hook to skip payment info loading for direct conversation missions.
- Enhanced error handling and loading states during conversation creation to improve user experience.

* feat: add mission deletion functionality for recruiters

- Implemented handleDeleteMission in useRecruiterMissionsPage to manage mission deletion with user confirmation and toast notifications.
- Enhanced RecruiterMiss

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 
 # Node
 node_modules/
-pnpm-lock.yaml
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -84,8 +83,8 @@ ehthumbs.db
 Icon?
 Desktop.ini
 
-# Lock files (optional – if you don’t want to commit pnpm lock)
-pnpm-lock.yaml
+#vercel
+.vercel
 
 # Vercel
 .vercel
