--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,9 @@
   "name": "@shiftly/web",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "24.x"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
@@ -25,9 +28,9 @@
     "@tanstack/react-query-persist-client": "^5.90.13",
     "lucide-react": "^0.555.0",
     "mapbox-gl": "^3.1.2",
-    "next": "^15.5.9",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "next": "15.5.9",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-map-gl": "^7.1.7",
     "recharts": "^3.5.1",
     "tamagui": "^1.135.3"
@@ -41,7 +44,7 @@
     "@types/react-dom": "^19",
     "dotenv-cli": "^10.0.0",
     "eslint": "^9",
-    "eslint-config-next": "^15.5.9",
+    "eslint-config-next": "15.5.9",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
