--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "shiftly-apps",
   "private": true,
   "packageManager": "pnpm@10.18.3",
+  "engines": {
+    "node": "24.x"
+  },
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -36,5 +39,14 @@
     "@tamagui/lucide-icons": "^1.135.3",
     "burnt": "^0.13.0",
     "react-icons": "^5.4.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "@tailwindcss/oxide",
+      "esbuild",
+      "sharp",
+      "unrs-resolver"
+    ]
   }
 }
