--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,21 +1,22 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["DOM", "DOM.Iterable", "ES2020"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "jsx": "react-jsx",
-    "strict": true,
-    "skipLibCheck": true,
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
+    "allowJs": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-
-    "composite": true,
+    "jsx": "react-jsx",
     "declaration": true,
     "declarationMap": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "rootDir": "."
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["./src/**/*", "./types/**/*"],
   "exclude": ["node_modules", "dist"]
 }
