feat: add Vercel Cron configuration for automatic payment release
- Introduced a new cron job in vercel.json to schedule the release of payments daily at 6 AM UTC.
- Updated the release-payments API documentation to clarify security checks and idempotence logic.
- Removed outdated SQL function for calling the API via pg_cron, streamlining the payment release process.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "pnpm turbo run build --filter=@shiftly/web",
-  "installCommand": "corepack enable && corepack prepare pnpm@10.18.3 --activate && pnpm install"
+  "installCommand": "corepack enable && corepack prepare pnpm@10.18.3 --activate && pnpm install",
+  "crons": [
+    {
+      "path": "/api/cron/release-payments",
+      "schedule": "0 6 * * *"
+    }
+  ]
 }
